--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,11 @@ body {
   padding: 10px;
 }
 
+.form-control{  
+  width: 15em;
+  margin: -1em;
+}
+
 #imagen {  
   margin-left: auto;
   margin-right: auto;
@@ -19,7 +24,7 @@ span,h4{
 
 .btn-secondary {  
   width: 10em;
-  margin:0;
+  margin-top: 1em;  
   background-color: #f6a800;
   border:  #f6a800;
  }
@@ -72,7 +77,7 @@ img {
 
 .inPer {
   width: 40em;
-  margin:1em;
+  margin-left:15em;
   text-align: center;
   background-color: #dddee0;
   border-top: none;
@@ -92,12 +97,13 @@ img {
 }
 
 .btn-terciary {  
-  width: 40em;
+  width: 20em;
   margin:1em;
   background-color: #f6a800;
   border:  #f6a800; 
   text-align: center;    
   border-radius: 0;
+  color: white;
 }
 .secciondemierda { 
  background-color: #dddee0; 
@@ -110,6 +116,7 @@ input {
 }
 .inPer {
   text-align: center;
+  width: 20em;
 }
 #seccionPerfil{
   display: none;
@@ -131,6 +138,13 @@ input {
   border:  #f6a800; 
   text-align: center;      
   border-radius: 0;
+  color: white;
+}
+
+.divSaldo {
+  background-color: #f6a800;
+  width: 5em;
+  color: white;
 }
 /* fin css seccion ver saldo */
 
