--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -44,6 +44,13 @@ h4 {
  }
  /* fin css login */
 
+ .navMenu {  
+    color: white;
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+    size: 13px;
+ }
+
  /* css seccion registro */
  #registerSec {
    display: none; 
