--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,9 @@
 /* css del login */
 body {
   background-color: rgb(64, 65, 67);
-  text-align: center;  
-  width: 60%;
+  text-align: center; 
   padding: 10px;
-  margin: auto;
+  margin: auto;  
 }
 
 .form-control {   
@@ -80,13 +79,13 @@ h4 {
 
  /* css secion menú */
 
- .container-fluid {
-   width: 100%;   
+ .menuHome {
+  padding-bottom: 100%;   
  }
  
 .btn-primary{
-  width: 10em;
-  margin: 2em;
+  width: 15em;  
+  margin-top: 1em;
   margin-left: auto;
   background-color: #f6a800;
   border:  #f6a800; 
@@ -156,7 +155,7 @@ img {
   padding: 0%;
   font-size: 16px;;
 }
-.secciondemierda { 
+.secciondem { 
  background-color: #dddee0; 
 }
 
@@ -258,5 +257,6 @@ input {
   }
   .reseña{
     font-size: 25px;
+    width: 80%;
   }
   
